--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "the-internet-tests",
   "type": "module",
   "devDependencies": {
+    "@wdio/allure-reporter": "^8.38.0",
     "@wdio/cli": "^8.36.1",
     "@wdio/local-runner": "^8.36.1",
     "@wdio/mocha-framework": "^8.36.1",
-    "@wdio/spec-reporter": "^8.36.1"
+    "@wdio/spec-reporter": "^8.36.1",
+    "allure-commandline": "^2.29.0"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
